# src/app.js
@@ -2,29 +2,6 @@ const express = require('express');
 const cors = require('cors');
 const swaggerUi = require('swagger-ui-express');
 
-let jedis = [
-    {
-        "id": 1,
-        "name": "Ahsoka Tano",
-        "species": "Togruta"
-    },
-    {
-        "id": 2,
-        "name": "Luke Skywalker",
-        "species": "Human"
-    },
-    {
-        "id": 3,
-        "name": "Jhuan Vekar Bel’tan",
-        "species": "Human"
-    },
-    {
-        "id": 4,
-        "name": "Andros Alfon Kresh",
-        "species": "Human"
-    }
-]
-
 const app = express();
 const PORT = 3030;
 
@@ -50,42 +27,15 @@ app.get('/', (req, res) => {
     res.send('<h1>API de JEDI</h1>');
 })
 
-//- Mostrar todos los jedi
-app.get('/jedis', (req, res) => {
-    res.json(jedis);
-})
+//- RUTA JEDI HACIA ROUTER-//
+app.use('/jedis', require('./routes/jedis'));
 
-//- Mostrar jedi por ID
-app.get('/jedis/:id', (req, res) => {
-    let id = req.params.id;
-    res.json(jedis.find(jedi => jedi.id == id));
-})
+//- RUTA RANGOS HACIA ROUTER-//
 
-//-Eliminar un jedi
-app.delete('/jedis/:id', (req, res) => {
-    let id = req.params.id;
-    jedis = jedis.filter(jedi => jedi.id != id);
-    res.status(204).json({msg: 'Jedi eliminado'});
-})
+//- RUTA FORMAS COMBATE HACIA ROUTER-//
+app.use('/stylesForm', require('./routes/stylesForm'));
 
-//- Crear un jedi
-app.post('/jedis', (req, res) => {
-    console.log('body:', req.body)
-    const newJedis = req.body;
-    let maximo = jedis.Math.max(...jedis.map(j => j.id));
-    newJedis.id = maximo+1;
-    jedis.push(newJedis);
-    res.status(201).json(newJedis);
-})
-
-app.put('/jedis/:id', (req, res) => {
-    let id = req.params.id;
-    let jedi = jedis.find(j => j.id == id);
-    console.log(jedi);
-    jedi.name = req.body.name;
-    jedi.species = req.body.species;
-    res.status(200).json(jedi);
-});
+//- RUTA ESPECIALIZACIÓN HACIA ROUTER-//
 
 
 //- Para ver la API 
